[project]
name = "huleedu-essay-lifecycle-service"
version = "0.2.0"
description = "HuleEdu Essay Lifecycle Service - State Management and Processing Orchestration"
authors = [
    { name = "Olof Larsson", email = "paunchygent@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "quart",
    "hypercorn",
    "aiokafka",
    "aiohttp",
    "python-dotenv",
    "huleedu-common-core",
    "huleedu-service-libs",
    "pydantic",
    "pydantic-settings",
    "prometheus-client",
    "dishka",
    "quart-dishka",
    "transitions",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pdm.resolution.overrides]
huleedu-common-core = "file:///app/libs/common_core"
huleedu-service-libs = "file:///app/libs/huleedu_service_libs"

[tool.pdm.scripts]
start = "python app.py"
start_worker = "python worker_main.py"
dev = "python app.py --reload"
test = "pytest tests/ -v"
format = "ruff format . && ruff check --fix ."
typecheck = "mypy ."

# Alembic database migration commands
migrate-upgrade = "alembic upgrade head"
migrate-downgrade = "alembic downgrade -1"
migrate-history = "alembic history"
migrate-current = "alembic current"
migrate-revision = "alembic revision --autogenerate"
migrate-stamp = "alembic stamp head"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = false
check_untyped_defs = true
explicit_package_bases = true
exclude = [
    ".venv/",
    "__pycache__/", 
    ".pdm-build/",
    ".mypy_cache/"
]

# External libraries without official type stubs
[[tool.mypy.overrides]]
module = [
    "dishka.*",
    "hypercorn.*",
    "aiokafka.*",
    "quart_dishka.*",
]
ignore_missing_imports = true

# Service-local modules
[[tool.mypy.overrides]]
module = [
    "di",
    "protocols",
    "config",
    "core_logic",
    "event_router",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by line-length setting
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space" 