[project]
name = "huleedu-identity-service"
version = "0.1.0"
description = "HuleEdu Identity Service for authentication and JWT/JWKS"
authors = [
    { name = "HuleEdu Team", email = "dev@huledu.com" },
]
requires-python = ">=3.11"
dependencies = [
    "quart",
    "hypercorn",
    "aiokafka",
    "aiohttp",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "prometheus-client",
    "dishka",
    "quart-dishka",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "huleedu-common-core",
    "huleedu-service-libs",
    "argon2-cffi",  # For Argon2id password hashing
    "PyJWT",
    "cryptography",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock",
    "faker",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.resolution.overrides]
huleedu-common-core = "file:///app/libs/common_core"
huleedu-service-libs = "file:///app/libs/huleedu_service_libs"

[tool.pdm.scripts]
start = "hypercorn app:app --bind 0.0.0.0:7005"
dev = "quart --app app:app --debug run -p 7005"
migrate = "alembic upgrade head"
start-dev = {composite = ["migrate", "start"]}

# Alembic database migration commands (ergonomics; see Rule 085 for actual usage)
migrate-upgrade = "alembic upgrade head"
migrate-downgrade = "alembic downgrade -1"
migrate-history = "alembic history"
migrate-current = "alembic current"
migrate-revision = "alembic revision --autogenerate"
migrate-stamp = "alembic stamp head"
