[project]
name = "huleedu-nlp-service"
version = "0.1.0"
description = "HuleEdu NLP Service for student matching in essays"
authors = [
    {name = "HuleEdu Team", email = "dev@huledu.com"},
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiokafka",
    "aiohttp",
    "redis",
    "prometheus-client",
    "dishka",
    "huleedu-common-core",
    "huleedu-service-libs",
    "pydantic",
    "pydantic-settings",
    "pypandoc",
    "sqlalchemy",
    "asyncpg",
    "alembic",
    "rapidfuzz",
    "python-docx",  # For testing with real .docx essays
    # Advanced NLP metrics dependencies
    "spacy>=3.7.0",  # Core NLP framework
    "wordfreq>=3.0.0",  # Zipf frequency calculations for lexical sophistication
    "lexical-diversity>=0.1.1",  # MTLD/HDD metrics for lexical diversity
    "textdescriptives>=2.8.0",  # Dependency distance and coherence metrics
    "langdetect>=1.0.9",  # Language detection
    "gensim>=4.3.0",  # For phraseology metrics (PMI/NPMI calculations)
    # SpaCy language models - required for NLP analysis
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "sv-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/sv_core_news_sm-3.8.0/sv_core_news_sm-3.8.0-py3-none-any.whl",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false
package-type = "application"

[tool.pdm.resolution]
strategy = ["inherit_metadata", "direct_minimal_versions"]
respect-source-order = true
excludes = []

[tool.pdm.resolution.overrides]
huleedu-common-core = "file:///app/libs/common_core"
huleedu-service-libs = "file:///app/libs/huleedu_service_libs"

[dependency-groups]
dev = [
    "ruff>=0.11.11",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock",
    "faker",
]

[tool.pdm.scripts]
start = "python worker_main.py"
start-worker = "python worker_main.py"

# Alembic database migration commands
migrate-upgrade = "alembic upgrade head"
migrate-downgrade = "alembic downgrade -1"
migrate-history = "alembic history"
migrate-current = "alembic current"
migrate-revision = "alembic revision --autogenerate"
migrate-stamp = "alembic stamp head"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

# External libraries without official type stubs
[[tool.mypy.overrides]]
module = [
    "aiokafka.*",
    "aiohttp.*",
    "dishka.*",
    "prometheus_client.*",
    "redis.*",
    "spacy.*",
    "langdetect.*",
    "wordfreq.*",
    "lexical_diversity.*",
    "gensim.*",
    "textdescriptives.*",
]
ignore_missing_imports = true