[project]
name = "result-aggregator-service"
version = "0.1.0"
description = "Service to aggregate and query batch processing results."
authors = [
    {name = "Olof Larsson", email = "paunchygent@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "quart",
    "pydantic",
    "dishka",
    "quart-dishka",
    "aiokafka",
    "redis",
    "structlog",
    "python-json-logger",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-exporter-otlp-proto-http",
    "uvicorn",
    "huleedu-service-libs"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.overrides]
"huleedu-service-libs" = {"path" = "../libs", "editable" = true}

[project.optional-dependencies]
development = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "flake8",
    "mypy",
    "black",
    "isort",
]