[project]
name = "result-aggregator-service"
version = "0.1.0"
description = "Service to aggregate and query batch processing results."
authors = [
    {name = "Olof Larsson", email = "paunchygent@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "quart",
    "hypercorn",
    "pydantic",
    "pydantic-settings",
    "dishka",
    "quart-dishka",
    "aiokafka",
    "redis",
    "aiohttp",
    "python-dotenv",
    "prometheus-client",
    "huleedu-common-core",
    "huleedu-service-libs",
    "SQLAlchemy[asyncio]",
    "asyncpg",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.resolution.overrides]
huleedu-common-core = "file:///app/common_core"
huleedu-service-libs = "file:///app/services/libs"

[tool.pdm.scripts]
start = "python app.py"
dev = "quart --app app:app --debug run -p 4003"

[project.optional-dependencies]
development = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "flake8",
    "mypy",
    "black",
    "isort",
]