[project]
name = "huleedu-result-aggregator-service"
version = "0.1.0"
description = "Service to aggregate and query batch processing results."
authors = [
    {name = "Olof Larsson", email = "paunchygent@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "quart",
    "hypercorn",
    "pydantic",
    "pydantic-settings",
    "dishka",
    "quart-dishka",
    "aiokafka",
    "redis",
    "aiohttp",
    "python-dotenv",
    "prometheus-client",
    "huleedu-common-core",
    "huleedu-service-libs",
    "SQLAlchemy[asyncio]",
    "asyncpg",
    "alembic",  # Database migrations
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.resolution.overrides]
huleedu-common-core = "file:///app/libs/common_core"
huleedu-service-libs = "file:///app/libs/huleedu_service_libs"

[tool.pdm.scripts]
start = "python app.py"
dev = "quart --app app:app --debug run -p 4003"

# Alembic database migration commands
migrate-upgrade = "alembic upgrade head"
migrate-downgrade = "alembic downgrade -1"
migrate-revision = "alembic revision --autogenerate"
migrate-history = "alembic history"
migrate-current = "alembic current"
migrate-stamp = "alembic stamp head"

[project.optional-dependencies]
development = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "flake8",
    "mypy",
    "black",
    "isort",
]