[project]
name = "huleedu-spell-checker-service"
version = "0.1.0"
description = "HuleEdu Spell Checker Service (MVP)"
authors = [
    { name = "Olof Larsson", email = "paunchygent@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.10.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    # Add your actual spell checking library here if it's a direct dependency
    # e.g., "pyspellchecker>=0.8.1",
    # For common_core as a local path dependency:
    "huleedu-common-core",
    "huleedu-service-libs",
    "pydantic",
    "pydantic-settings",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

# Package configuration for proper imports
[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.pdm.resolution.overrides]
huleedu-common-core = "file:///app/common_core"
huleedu-service-libs = "file:///app/services/libs"

[tool.pdm.scripts]
start_worker = "python worker.py"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = false
check_untyped_defs = true
# disallow_untyped_defs = false # Default in root config 